--- a/auction-lyt-c-uni/pages/info/index.css
+++ b/auction-lyt-c-uni/pages/info/index.css
@@ -15,9 +15,14 @@
 }
 
 .header-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: var(--spacing-3);
     width: 50px;
     height: 50px;
+    font-size: 30px;
+    background: rgba(255, 255, 255, 0.2);
     border-radius: var(--radius-full);
     border: 2px solid rgba(255, 255, 255, 0.3);
 }
@@ -127,10 +132,15 @@
 }
 
 .item-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     margin-bottom: var(--spacing-2);
     width: 25px;
     height: 25px;
+    font-size: 24px;
+    line-height: 1;
 }
 
 .item-img img {
